Fix token page alignment

--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -1,8 +1,15 @@
 .main_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.hero_container {
+  display: flex;
+  justify-content: center;
+  width: 85%;
 }
 
 .coin {
